--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -28,7 +28,7 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
         <ScrollViewer HorizontalAlignment="Left" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto">
-            <StackPanel x:Name="contentPanel" Margin="120,30,0,0" KeyDown="contentPanel_KeyDown">
+            <StackPanel x:Name="contentPanel" Margin="120,30,0,0" KeyDown="ContentPanel_KeyDown">
                 <TextBlock HorizontalAlignment="Left" Text="Search" FontSize="36"/>
                 <StackPanel x:Name="inputPanel" Orientation="Horizontal" Margin="0,20,0,20">
                     <TextBox x:Name="searchInput" Width="300" HorizontalAlignment="Left"/>
